<resources>
    <string name="app_name">Distraction Tracker</string>
    <string name="dummy_text">Dummy text</string>
    <string name="settings">Settings</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete_account">Delete Account</string>
    <string name="add_entry">Add entry</string>
    <string name="add_new_entry">Add new entry</string>
    <string name="pick_date_and_time">Pick Date and Time</string>
    <string name="distraction">Distraction</string>
    <string name="ideas">Ideas</string>
    <string name="planning_problem">Planning Problem</string>
    <string name="external">External</string>
    <string name="internal">Internal</string>
    <string name="trigger">Trigger</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="how_feeling">How feeling</string>
    <string name="date_and_time">Date and Time</string>
    <string name="header_image">Header image</string>
    <string name="add_distraction">Add Distraction</string>
    <string name="reload">Reload</string>
    <string name="the_logout_button">The logout button</string>
    <string name="delete_account_button">Delete account button</string>
    <string name="only_show_entries">Only show entries</string>
    <string name="show_internal_triggers">Internal triggers</string>
    <string name="internal_trigger">Internal Trigger</string>
    <string name="external_trigger">External Trigger</string>
    <string name="all">All</string>
    <string name="sorting_order">Sorting order</string>
</resources>